<resources>
    <string name="app_name">Individual17_Mod5</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="textview">TextView</string>
    <string name="convert">CONVERT</string>
    <string name="reset">RESET</string>
    <string name="resultado">RESULTADO</string>
    <string name="monto">Monto</string>
    <string name="convertir_a">Convertir A:</string>
    <string name="todos">TODO</string>
</resources>