<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextIngreso"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/monto"
        android:inputType="number"
        android:textColorHint="#A1887F"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="LabelFor" />

    <Spinner
        android:id="@+id/spinnerInic"
        android:layout_width="122dp"
        android:layout_height="48dp"
        android:layout_marginStart="80dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextIngreso"
        app:layout_constraintStart_toEndOf="@+id/editTextIngreso"
        app:layout_constraintTop_toTopOf="@+id/editTextIngreso"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Spinner
        android:id="@+id/spinnerReem"
        android:layout_width="122dp"
        android:layout_height="48dp"
        android:layout_marginStart="96dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="83dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:text="@string/convertir_a"
        app:layout_constraintStart_toStartOf="@+id/editTextIngreso"
        app:layout_constraintTop_toBottomOf="@+id/editTextIngreso"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/buttonConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/convert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="@+id/buttonConvert"
        app:layout_constraintStart_toEndOf="@+id/buttonConvert"
        app:layout_constraintTop_toTopOf="@+id/buttonConvert" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/resultado"
        android:textColorHint="#8D6E63"
        app:layout_constraintEnd_toEndOf="@+id/buttonReset"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="@+id/buttonConvert"
        app:layout_constraintTop_toBottomOf="@+id/buttonConvert" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="145dp"
        android:layout_height="187dp"
        android:layout_marginStart="56dp"
        android:contentDescription="@string/todos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_monetization_on_24" />
</androidx.constraintlayout.widget.ConstraintLayout>